@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 phodevi: Add memory.temp sensor
 phodevi: Fixed k10temp CPU temperature reporting
+phodevi: Add IPMI ambient temperature support
 
 Phoronix Test Suite 7.4.0-Tynset
 19 September 2017
